// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`dependency on workspace without version in package.json: version: * 1`] = `
"{
  "format": "v2",
  "meta_hash": "a5d5a45555763c1040428cd33363c16438c75b23d8961e7458abe2d985fa08d1",
  "package_index": {
    "no-deps": 1,
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "*",
      "npm": {
        "name": "no-deps",
        "version": ">=0.0.0"
      },
      "package_id": 1,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *.*.* 1`] = `
"{
  "format": "v2",
  "meta_hash": "a5d5a45555763c1040428cd33363c16438c75b23d8961e7458abe2d985fa08d1",
  "package_index": {
    "no-deps": 1,
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "*.*.*",
      "npm": {
        "name": "no-deps",
        "version": ">=0.0.0"
      },
      "package_id": 1,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: =* 1`] = `
"{
  "format": "v2",
  "meta_hash": "a5d5a45555763c1040428cd33363c16438c75b23d8961e7458abe2d985fa08d1",
  "package_index": {
    "no-deps": 1,
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "=*",
      "npm": {
        "name": "no-deps",
        "version": ">=0.0.0"
      },
      "package_id": 1,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: kjwoehcojrgjoj 1`] = `
"{
  "format": "v2",
  "meta_hash": "a5d5a45555763c1040428cd33363c16438c75b23d8961e7458abe2d985fa08d1",
  "package_index": {
    "no-deps": 1,
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "kjwoehcojrgjoj",
      "dist_tag": {
        "name": "no-deps",
        "tag": "no-deps"
      },
      "package_id": 1,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *.1.* 1`] = `
"{
  "format": "v2",
  "meta_hash": "a5d5a45555763c1040428cd33363c16438c75b23d8961e7458abe2d985fa08d1",
  "package_index": {
    "no-deps": 1,
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "*.1.*",
      "npm": {
        "name": "no-deps",
        "version": ">=0.0.0"
      },
      "package_id": 1,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *-pre 1`] = `
"{
  "format": "v2",
  "meta_hash": "a5d5a45555763c1040428cd33363c16438c75b23d8961e7458abe2d985fa08d1",
  "package_index": {
    "no-deps": 1,
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "*-pre",
      "npm": {
        "name": "no-deps",
        "version": ">=0.0.0"
      },
      "package_id": 1,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: 1 1`] = `
"{
  "format": "v2",
  "meta_hash": "80ecab0f58b4fb37bae1983a06ebd81b6573433d7f92e938ffa7854f8ff15e7c",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "1",
      "npm": {
        "name": "no-deps",
        "version": "<2.0.0 >=1.0.0"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "1.1.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-1.1.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-ebG2pipYAKINcNI3YxdsiAgFvNGp2gdRwxAKN2LYBm9+YxuH/lHH2sl+GKQTuGiNfCfNZRMHUyyLPEJD6HWm7w==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: 1.* 1`] = `
"{
  "format": "v2",
  "meta_hash": "80ecab0f58b4fb37bae1983a06ebd81b6573433d7f92e938ffa7854f8ff15e7c",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "1.*",
      "npm": {
        "name": "no-deps",
        "version": "<2.0.0 >=1.0.0"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "1.1.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-1.1.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-ebG2pipYAKINcNI3YxdsiAgFvNGp2gdRwxAKN2LYBm9+YxuH/lHH2sl+GKQTuGiNfCfNZRMHUyyLPEJD6HWm7w==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: 1.1.* 1`] = `
"{
  "format": "v2",
  "meta_hash": "80ecab0f58b4fb37bae1983a06ebd81b6573433d7f92e938ffa7854f8ff15e7c",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "1.1.*",
      "npm": {
        "name": "no-deps",
        "version": "<1.2.0 >=1.1.0"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "1.1.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-1.1.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-ebG2pipYAKINcNI3YxdsiAgFvNGp2gdRwxAKN2LYBm9+YxuH/lHH2sl+GKQTuGiNfCfNZRMHUyyLPEJD6HWm7w==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: 1.1.0 1`] = `
"{
  "format": "v2",
  "meta_hash": "80ecab0f58b4fb37bae1983a06ebd81b6573433d7f92e938ffa7854f8ff15e7c",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "1.1.0",
      "npm": {
        "name": "no-deps",
        "version": "==1.1.0"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "1.1.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-1.1.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-ebG2pipYAKINcNI3YxdsiAgFvNGp2gdRwxAKN2LYBm9+YxuH/lHH2sl+GKQTuGiNfCfNZRMHUyyLPEJD6HWm7w==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *-pre+build 1`] = `
"{
  "format": "v2",
  "meta_hash": "c881b2c8cf6783504861587208d2b08d131130ff006987d527987075b04aa921",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "*-pre+build",
      "npm": {
        "name": "no-deps",
        "version": ">=0.0.0"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "2.0.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-2.0.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-W3duJKZPcMIG5rA1io5cSK/bhW9rWFz+jFxZsKS/3suK4qHDkQNxUTEXee9/hTaAoDCeHWQqogukWYKzfr6X4g==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *+build 1`] = `
"{
  "format": "v2",
  "meta_hash": "c881b2c8cf6783504861587208d2b08d131130ff006987d527987075b04aa921",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "*+build",
      "npm": {
        "name": "no-deps",
        "version": ">=0.0.0"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "2.0.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-2.0.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-W3duJKZPcMIG5rA1io5cSK/bhW9rWFz+jFxZsKS/3suK4qHDkQNxUTEXee9/hTaAoDCeHWQqogukWYKzfr6X4g==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: latest 1`] = `
"{
  "format": "v2",
  "meta_hash": "c881b2c8cf6783504861587208d2b08d131130ff006987d527987075b04aa921",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "latest",
      "dist_tag": {
        "name": "no-deps",
        "tag": "no-deps"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "2.0.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-2.0.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-W3duJKZPcMIG5rA1io5cSK/bhW9rWFz+jFxZsKS/3suK4qHDkQNxUTEXee9/hTaAoDCeHWQqogukWYKzfr6X4g==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version:  1`] = `
"{
  "format": "v2",
  "meta_hash": "c881b2c8cf6783504861587208d2b08d131130ff006987d527987075b04aa921",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "",
      "dist_tag": {
        "name": "no-deps",
        "tag": "no-deps"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "2.0.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-2.0.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-W3duJKZPcMIG5rA1io5cSK/bhW9rWFz+jFxZsKS/3suK4qHDkQNxUTEXee9/hTaAoDCeHWQqogukWYKzfr6X4g==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on same name as workspace and dist-tag: with version 1`] = `
"{
  "format": "v2",
  "meta_hash": "c881b2c8cf6783504861587208d2b08d131130ff006987d527987075b04aa921",
  "package_index": {
    "no-deps": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "trees": [
    {
      "id": 0,
      "path": "node_modules",
      "depth": 0,
      "dependencies": {
        "bar": {
          "id": 0,
          "package_id": 2
        },
        "no-deps": {
          "id": 1,
          "package_id": 1
        }
      }
    },
    {
      "id": 1,
      "path": "node_modules/bar/node_modules",
      "depth": 1,
      "dependencies": {
        "no-deps": {
          "id": 2,
          "package_id": 3
        }
      }
    }
  ],
  "dependencies": [
    {
      "name": "bar",
      "literal": "packages/bar",
      "workspace": "packages/bar",
      "package_id": 2,
      "behavior": {
        "workspace": true
      },
      "id": 0
    },
    {
      "name": "no-deps",
      "literal": "packages/mono",
      "workspace": "packages/mono",
      "package_id": 1,
      "behavior": {
        "workspace": true
      },
      "id": 1
    },
    {
      "name": "no-deps",
      "literal": "latest",
      "dist_tag": {
        "name": "no-deps",
        "tag": "no-deps"
      },
      "package_id": 3,
      "behavior": {
        "prod": true,
        "workspace": true
      },
      "id": 2
    }
  ],
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": {
        "tag": "root",
        "value": "",
        "resolved": ""
      },
      "dependencies": [
        0,
        1
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/mono",
        "resolved": "workspace:packages/mono"
      },
      "dependencies": [],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": {
        "tag": "workspace",
        "value": "workspace:packages/bar",
        "resolved": "workspace:packages/bar"
      },
      "dependencies": [
        2
      ],
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "no-deps",
      "name_hash": "5128161233225832376",
      "resolution": {
        "tag": "npm",
        "value": "2.0.0",
        "resolved": "http://localhost:1234/no-deps/-/no-deps-2.0.0.tgz"
      },
      "dependencies": [],
      "integrity": "sha512-W3duJKZPcMIG5rA1io5cSK/bhW9rWFz+jFxZsKS/3suK4qHDkQNxUTEXee9/hTaAoDCeHWQqogukWYKzfr6X4g==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "5128161233225832376": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0",
    "5128161233225832376": "4.17.21"
  }
}"
`;
